removed some personalizations from the stock files

--- a/source/blankcover.xhtml
+++ b/source/blankcover.xhtml
@@ -11,11 +11,15 @@
       body { oeb-column-number: 1; }
       #cover-image { text-align: center; }
       /*]]>*/
+      h* {text-align: center; }
     </style>
   </head>
   <body>
     <div id="cover-image">
-      <img alt="[TITLE]" src="../Images/cover.jpg" />
+      <!-- <img alt="[TITLE]" src="../Images/cover.jpg" /> -->
+      <h1>[TITLE]</h1>
+      <h3>by</h3>
+      <h2>Firstname Lastname</h2>
     </div>
   </body>
 </html>
