big update to merger, cleaned up the source files, much more reliable.

--- a/example.html
+++ b/example.html
@@ -1,8 +1,8 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
-<!-- Title: Swords of Mars -->
-<!-- BookDir: som -->
-<!-- AuthorFirst: Edgar Rice -->
-<!-- AuthorLast: Burroughs -->
+<!-- Title: Example Book -->
+<!-- BookDir: junk -->
+<!-- AuthorFirst: Name the First -->
+<!-- AuthorLast: Name Familiar -->
 <!-- Start: Front Matter -->
 <!-- File: frontmatter.xhtml frontmatter -->
 <h2>Front Matter</h2>
