forgot that part

--- a/example.html
+++ b/example.html
@@ -1,6 +1,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <!-- Title: Example Book -->
-<!-- BookDir: junk -->
+<!-- BookDir: example -->
 <!-- AuthorFirst: Name the First -->
 <!-- AuthorLast: Name Familiar -->
 <!-- Start: Front Matter -->
