updated my syntax to more pythonlike idioms, cleaned up cruft, added functions to find date, editor and author in the content

--- a/example.html
+++ b/example.html
@@ -3,6 +3,11 @@
 <!-- BookDir: example -->
 <!-- AuthorFirst: Name the First -->
 <!-- AuthorLast: Name Familiar -->
+<!-- Publisher: Publish -->
+<!-- EditorFirst: Name the First -->
+<!-- EditorLast: Name Familiar -->
+<!-- CoverFirst: Name the First -->
+<!-- CoverLast: Name Familiar -->
 <!-- Start: Front Matter -->
 <!-- File: frontmatter.xhtml frontmatter -->
 <h2>Front Matter</h2>
