cleaned up code, refactored all the bits, used just one mechanism to replace content, you know, like a good programmer.

--- a/example.html
+++ b/example.html
@@ -24,3 +24,9 @@
 <p class="first-para-chapter">First Paragraph</p>
 <p class="last-para">Last Paragraph</p>
 <!-- End: -->
+<!-- Start: Chapter 2 -->
+<!-- File: chapter02.xhtml chapter-2 -->
+<h2>Chapter 2</h2>
+<p class="first-para-chapter">First Paragraph</p>
+<p class="last-para">Last Paragraph</p>
+<!-- End: -->
