now scans for image tags, will copy images into final directory.

--- a/example.html
+++ b/example.html
@@ -17,6 +17,13 @@
 <h2>Prologue</h2>
 <p class="first-para-chapter">First Paragraph</p>
 <p class="last-para">Last Paragraph</p>
+<br />
+<a id="image"><!-- Anchor --></a>
+<div class="center group">
+	<img src="Images/image01.jpg" alt="image 1" title="title" />
+	<p class="caption">image 1</p>
+</div>
+<br />
 <!-- End: -->
 <!-- Start: Chapter 1 -->
 <!-- File: chapter01.xhtml chapter-1 -->
