--- a/example.html
+++ b/example.html
@@ -1,25 +1,21 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <!-- Title: Example Book -->
 <!-- BookDir: example -->
-<!-- AuthorFirst: Name the First -->
-<!-- AuthorLast: Name Familiar -->
-<!-- Publisher: Publish -->
-<!-- EditorFirst: Name the First -->
-<!-- EditorLast: Name Familiar -->
-<!-- CoverFirst: Name the First -->
-<!-- CoverLast: Name Familiar -->
-<!-- Start: Front Matter -->
-<!-- File: frontmatter.xhtml frontmatter -->
+<!-- Author: Firstname Lastname -->
+<!-- Publisher: Publisher -->
+<!-- Editor: FirstName LastName -->
+<!-- Cover: FirstName LastName -->
+<!-- Subjects: One, Two, Three>
+<!-- Start: frontmatter 0 Frontmatter -->
 <h2>Front Matter</h2>
 <!-- End: -->
-<!-- Start: Prologue -->
+<!-- Start: prologue 0 Prologue -->
 <!-- File: prologue.xhtml prologue -->
 <h2>Prologue</h2>
 <p class="first-para-chapter">First Paragraph</p>
 <p class="last-para">Last Paragraph</p>
 <!-- End: -->
-<!-- Start: Chapter 1 -->
-<!-- File: chapter01.xhtml chapter-1 -->
+<!-- Start: chapter01 1 Chapter 1 -->
 <h2>Chapter 1</h2>
 <p class="first-para-chapter">First Paragraph</p>
 <p class="last-para">Last Paragraph</p>
